<resources>
    //app
    <string name="app_name">Nest</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    //menu
    <string name="name_of_app">Nest</string>

    <string name="menu_guess_who">Guess Who</string>
    <string name="menu_name_quiz">Name Quiz</string>
    <string name="menu_audio_quiz">Audio Quiz</string>
    <string name="menu_gallery_ui">Gallery</string>

    //nav/fragment-guessWho
    <string name="fragment_guesswho">Guess Who</string>
    <string name="guesswho_duck">Duck</string>
    <string name="guesswho_goose">Goose</string>

    //nav/fragment-namequizz
    <string name="fragment_name_quizz">Name Quiz</string>

    //nav/fragment-audioquizz
    <string name="fragment_audio_quizz">Audio Quiz</string>


    //nav/fragment-gallery
    <string name="fragment_gallery">Gallery</string>
    <string name="hello_blank_fragment">some fact</string>


    //nav-fragment-nameQuiz

    //nav-fragment-audioQuiz

    //nav-fragment-gallery

    //nav-fragment-fact
    <string name="show_bird">afdsfdasfd</string>
    <string name="Factid">Fact</string>
    <string name="scooretxt">Scoore</string>
    <string name="audio_quiz">Audio Quiz</string>
    <string name="to_menu">To Menu</string>
    <string name="play_quiz">play quiz</string>
    <string name="play">play</string>
    <string name="duck_and_goose_logo">duck and goose Logo</string>
    <string name="next">Next</string>
    <string name="birds_in_grid_layout">Birds in grid layout</string>
    <string name="description">description</string>
    <string name="next_to_fact">Next</string>
    <string name="image_showing_the_bird_you_guessed">Image showing the bird you guessed</string>
    <string name="description_name_to_guess">image of a bird you have to guess</string>
    <string name="start">Start</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="open_facebook">Open Facebook</string>

</resources>