<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--        guess who-->
        <item
            android:id="@+id/nav_guesswho"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/menu_guess_who" />

        <!--        todo: change to namequiz  refactor-->
        <item
            android:id="@+id/nav_namequiz"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_name_quiz" />
        <item
            android:id="@+id/nav_audioquiz"
            android:icon="@android:drawable/ic_lock_silent_mode_off"
            android:title="@string/audio_quiz" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery_ui" />
    </group>
</menu>