<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_navigation"
    app:startDestination="@id/nav_home">

<!--    todo: debug start changing string, then change packag eks Fragmant  -->

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.nest.navigationdraw.GuesswhoFragment"
        android:label="@string/fragment_guesswho"
        tools:layout="@layout/fragment_home" />

<!--name quiz    -->
    <fragment
        android:id="@+id/nav_guesswho"
        android:name="com.example.nest.navigationdraw.HomeFragment"
        android:label="@string/fragment_name_quizz" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.nest.navigationdraw.GalleryFragment"
        android:label="@string/menu_gallery_ui"
        tools:layout="@layout/fragment_gallery" />


</navigation>